--- a/my_study/torch/torch_math.ipynb
+++ b/my_study/torch/torch_math.ipynb
@@ -135,9 +135,9 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.6194, -0.0981,  0.0840,  0.7558],\n",
-       "        [-1.5340, -1.1699, -0.8937, -0.6121],\n",
-       "        [-0.1541, -1.4392, -1.2104, -1.4684]])"
+       "tensor([[ 0.3327,  0.9649,  0.6435,  1.8641],\n",
+       "        [-1.0757, -0.9502, -1.5536,  0.2236],\n",
+       "        [ 1.2469, -0.5654, -0.7009, -0.2913]])"
       ]
      },
      "execution_count": 7,
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "855bea17-0a33-4825-9940-f1c9bb79db2b",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
        "        [ 4.0000,  3.0000,  2.0000,  1.0000]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "c65c1a84-183b-4bd7-ae65-1709c5e9f576",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
        "        [ 8.0000,  9.0000, 10.0000, 11.0000,  4.0000,  3.0000,  2.0000,  1.0000]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "2c24dac5-28f5-443d-98d6-cbe040fec8e4",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
        "tensor(66.)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "2751206f-0155-48da-ab5a-e55a1fe70d1a",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
        " tensor([[0, 1]]))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "cc3b2790-d808-49a5-9d7d-ac1c99d29f04",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,275 @@
        "        [2, 3]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a+b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "67f25355-1756-4008-94bf-69e9ddeffd59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([ 8.,  9., 10., 11.]),\n",
+       " tensor([[ 4.,  5.,  6.,  7.],\n",
+       "         [ 8.,  9., 10., 11.]]))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[-1], X[1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f8d4ab81-eddb-4911-ba71-c0ede831b692",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[12., 12., 12., 12.],\n",
+       "        [12., 12.,  8., 12.],\n",
+       "        [ 8.,  9., 10., 11.]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[1,2] = 8\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e522d229-2ff6-4172-a510-bbfa1d98c4d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[12., 12., 12., 12.],\n",
+       "        [12., 12., 12., 12.],\n",
+       "        [ 8.,  9., 10., 11.]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[0:2 , :] = 12\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9c28b714-5d57-4a31-8221-0d8d2b0c1240",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[12., 13., 13., 12.],\n",
+       "        [12., 13., 13., 12.],\n",
+       "        [ 8.,  9., 10., 11.]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[0:2 , 1:3] = 13\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8f9282da-346d-402b-94e6-c5e62038df4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "before = id(Y)\n",
+    "Y = Y + X\n",
+    "id(Y) == before"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "27809c95-2058-4762-9acb-e7eb4a997014",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "before = id(Y)\n",
+    "Y  += X\n",
+    "id(Y) == before"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "afc77e37-0a75-42c9-ba02-71a79d562098",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[12., 13., 13., 12.],\n",
+       "        [12., 13., 13., 12.],\n",
+       "        [ 8.,  9., 10., 11.]], dtype=float32),\n",
+       " numpy.ndarray,\n",
+       " 1715484542704,\n",
+       " 1715478796464)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = X.numpy()\n",
+    "A,type(A),id(A),id(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "745bd78f-b341-43ef-a4b3-172cf7efcead",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[12., 13., 13., 12.],\n",
+       "         [12., 13., 13., 12.],\n",
+       "         [ 8.,  9., 10., 11.]]),\n",
+       " torch.Tensor,\n",
+       " 1715478030112,\n",
+       " 1715484542704)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B = torch.tensor(A)\t\n",
+    "B,type(B),id(B),id(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "75b656ac-f269-4b8d-b2c6-84134af97c1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([4.5000]), 4.5, 4.5)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = torch.tensor([4.5])\n",
+    "a, a.item(), float(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "1d2eb3e5-22e5-433b-90fe-2eb2b692cd3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[0],\n",
+       "         [1],\n",
+       "         [2],\n",
+       "         [3]]),\n",
+       " tensor([[0, 1, 2, 3]]))"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = torch.arange(4).reshape(4,1)\n",
+    "b = torch.arange(4).reshape(1,4)\n",
+    "a,b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "51718d06-8ac2-4457-ba2a-ed54f92780e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0, 1, 2, 3],\n",
+       "        [1, 2, 3, 4],\n",
+       "        [2, 3, 4, 5],\n",
+       "        [3, 4, 5, 6]])"
+      ]
+     },
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67f25355-1756-4008-94bf-69e9ddeffd59",
+   "id": "866e110c-dbc5-4260-af85-96328b39a335",
    "metadata": {},
    "outputs": [],
    "source": []
